# simple_colour

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/tests/: tests.rs
