[package]
name = "simple_colour"
version = "1.0.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A crate that allows programmers to change the style or colour of their strings"
repository = "https://github.com/NikolasNikshiqi/simple_colour"
keywords = ["ansi", "terminal", "color", "colour", "styling"]
categories = ["command-line-interface"]

[dependencies]
